# chat-with-tafseer

./: .env.example  README.md  index.html  main.py  model.md  pyproject.toml
.playwright-cli/: page-2026-03-29T00-23-47-020Z.yml  page-2026-03-29T00-25-34-909Z.yml
agent/: graph.py  nodes.py  state.py
docs/: get_tafseer_by_chapter.html  index.html  list_surahs.html  llm_txt.html  llms.txt  resource_ids.html  send_message.html  tutorial_project.html  verse_keys.html
docs/assets/scripts/: docs.js  get-tafseer.js  send-message.js
docs/assets/styles/: docs.css
services/: ollama_service.py  quran_service.py
tests/: test_main.py
