[project]
name = "chat-with-tafseer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
]
